--- a/README
+++ b/README
@@ -4,3 +4,8 @@ The purpose of this project is
 to self-learn the mechanics of
 git. Nothing more and nothing
 else (for now). So, relax a little. 
+
+Meanwhile and just for fun I plan 
+to beta-test SparkleShare: a new
+tool for syncronize your computer
+remotely.
