--- a/README
+++ b/README
@@ -7,5 +7,4 @@ else (for now). So, relax a little.
 
 Meanwhile and just for fun I plan 
 to beta-test SparkleShare: a new
-tool for syncronize your computer
-remotely.
+syncing tool on the cloud.
